add custom menu icons for v1.5

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,3 @@
-
-.svn/text-base/sld-custom-content-and-taxonomies.php.svn-base
-
-.svn/text-base/readme.txt.svn-base
-
-.svn/text-base/license.txt.svn-base
-
-.svn/text-base/class.unregister-taxonomy.php.svn-base
-
-.svn/text-base/class.register-taxonomy.php.svn-base
-
-.svn/text-base/class.register-post-type.php.svn-base
-
-.svn/entries
-
-.svn/dir-props
-
-.svn/all-wcprops
-
+.svn*
 .DS_Store
 
-.svn/dir-prop-base
-
-.svn/lock
-
-.svn/tmp/text-base/readme.txt.svn-base
-
-.svn/tmp/text-base/class.register-post-type.php.svn-base
-
-.svn/tmp/text-base/sld-custom-content-and-taxonomies.php.svn-base
